@@ -31,8 +31,10 @@
 $_lang['prop_gsm.allowedtemplates_desc'] = 'A comma-separated list of Template IDs to filter by. Will only filter if a value is set.';
 $_lang['prop_gsm.context_desc'] = 'Limit to the specified Context(s). If empty, will grab Resources from current Context. Defaults to empty, can support a comma-separated list.';
 $_lang['prop_gsm.maxdepth_desc'] = 'The depth down the tree to grab Resources. If set to empty or 0, will grab all depths.';
-$_lang['prop_gsm.excluderesources_desc'] = 'An optional comma-separated list of Resources to skip.';
+$_lang['prop_gsm.excluderesources_desc'] = 'Optional. A comma-separated list of Resources to skip.';
+$_lang['prop_gsm.excludechildrenof_desc'] = 'Optional. A comma-separated list of Resources whose children to skip.';
 $_lang['prop_gsm.hidedeleted_desc'] = 'If true, will show only nondeleted Resources.';
+$_lang['prop_gsm.showhidden_desc'] = 'If true, will show Resources hidden from menus.';
 $_lang['prop_gsm.googleschema_desc'] = 'The location of the GoogleSiteMap schema.';
 $_lang['prop_gsm.published_desc'] = 'If true, will only show published resources.';
 $_lang['prop_gsm.searchable_desc'] = 'If true, will only show searchable resources.';
@@ -43,3 +45,4 @@ $_lang['prop_gsm.startid_desc'] = 'Optional. The ID of a Resource to start the s
 $_lang['prop_gsm.templatefilter_desc'] = 'The modTemplate column to filter by.';
 $_lang['prop_gsm.itemtpl_desc'] = 'The Chunk to use for each result item.';
 $_lang['prop_gsm.containertpl_desc'] = 'The Chunk to use for the output container.';
+$_lang['prop_gsm.where_desc'] = 'Optional. A JSON object of parameters to pass into the where statement.';
