@@ -2,6 +2,7 @@ Changelog for GoogleSiteMap.
 
 GoogleSiteMap 1.3.0
 ====================================
+- [#7] Add &showHidden for showing items hidden from menu; hide those by default
 - Add &where for JSON-based where filtering
 - [#13] Add &excludeChildrenOf, which can take a comma-separated list of parents to exclude all children of
 
